<resources>
    <string name="app_name">NAPS Tester</string>

    <string name="app_name_full">The Nencki Affective Picture System</string>

    MainActivity
    <string name="button_start">Start</string>
    <string name="button_about">About</string>


    User Activity
    <string name="text_name">Name</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>

    <string name="empty_name">Please enter name</string>
    <string name="empty_age">Please enter age</string>
    <string name="empty_sex">Please enter gender</string>

    <string name="button_next">Next</string>

    Picture Activity
    <string name="empty_valence">Please enter valence</string>
    <string name="empty_arousal">Please enter arousal</string>


    End Activity
    <string name="results">Results</string>

    <string name="button_finish">Finish</string>







    About Section



    <string name="development">
        Development\n\n
        Matko Horvat\n
        Polytechnic of Zagreb\n
        matko.horvat1@outlook.com
    </string>

    <string name="mentor">
        Mentor\n\n
        Marko Horvat\n
        University of Applied Sciences\n
        Zagreb\n
        marko.horvat@tvz.hr
    </string>

    <string name="database">
        NAPS database\n\n
        Laboratory of Brain Imaging\n\n
        (LOBI)\n
        Nencki Institute of\n
        Experimental Biology\n
        a.marchewka@nencki.gov.pl\n\n\n
        2017.
    </string>


    Instruction Section

    <string name="how_to">How to use this app</string>



    <string name="instruction">NAPS (The Nencki Affective Picture System) Tester is an application made for academic purposes using the NAPS database.\n\n
        Database cointains pictures and user of this app rates them by emotion he gets from looking at them.\n\n User provides his name, age and gender and starts the sequence which contains pictures he will be responding to.\n\n
        Between two pictures there is a screen in Teal color in duration of 5 seconds so that the user can clear his mind before seeing the next picture.\n\n
        Picture is rated by choosing Valence and Arousal.
    </string>

    <string name="instruction_valence">Valence represents the emotion. Scale goes from 1 (Sad) to 9 (Happy)</string>

    <string name="instruction_arousal">Arousal represents the intensity of that emotion. Scale goes from 1 (Low) to 9 (High)</string>




-------------------------------------------------------------------------------
    <string name="thanks">Thank you for participating</string>

    <string name="exit">Please click BACK again to exit</string>

    <string name="no_connection">Internet connection is needed</string>


</resources>
